--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL =https://cbc-project-backend-5.onrender.com
+VITE_BACKEND_URL =http://localhost:3000
 client_id=316269321757-orclagd9f2iocsm01hc9q4f59nu2rlcr.apps.googleusercontent.com
