add domain name

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "redirects": [
+    {
+      "source": "https://www.vexio.com/(.*)",
+      "destination": "https://vexio.com/$1",
+      "permanent": true
+    }
   ]
 }
